fixed reponsive on smaller device

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1229,7 +1229,7 @@ contact__input:-webkit-autofill{
   }
 }
 
-@media screen and (min-width; 768px){
+@media screen and (min-width: 768px){
   .services__container{
     grid-template-columns: repeat(2, 250px);
   } 
@@ -1619,6 +1619,6 @@ contact__input:-webkit-autofill{
 
   .scrollup{
     right: 3rem;
-    
+
   }
 }
